--- a/src/gui/UpdateEncheres.fxml
+++ b/src/gui/UpdateEncheres.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.UpdateEncheresController">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="780.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="gui.UpdateEncheresController">
     <stylesheets>
-        <URL value="@updateencheres.css"/>
+        <URL value="@updateencheres.css" />
     </stylesheets>
+   <children>
+      <Button fx:id="btupdate" layoutX="548.0" layoutY="250.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="143.0" text="Update" />
+      <TextField fx:id="tfmise" layoutX="305.0" layoutY="94.0" prefHeight="25.0" prefWidth="386.0" />
+      <Label layoutX="143.0" layoutY="81.0" prefHeight="34.0" prefWidth="82.0" text="Seuil mise :" />
+      <Label layoutX="143.0" layoutY="170.0" prefHeight="34.0" prefWidth="82.0" text="Date de debut :" />
+      <DatePicker fx:id="date" layoutX="305.0" layoutY="175.0" prefHeight="25.0" prefWidth="386.0" />
+   </children>
 </AnchorPane>
