--- a/src/gui/UpdateEncheres.fxml
+++ b/src/gui/UpdateEncheres.fxml
@@ -7,12 +7,12 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="780.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="gui.UpdateEncheresController">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="780.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.UpdateEncheresController">
     <stylesheets>
         <URL value="@updateencheres.css" />
     </stylesheets>
    <children>
-      <Button fx:id="btupdate" layoutX="548.0" layoutY="250.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="143.0" text="Update" />
+      <Button fx:id="btupdate" layoutX="548.0" layoutY="250.0" mnemonicParsing="false" onAction="#UpdateEncheres" prefHeight="47.0" prefWidth="143.0" text="Update" />
       <TextField fx:id="tfmise" layoutX="305.0" layoutY="94.0" prefHeight="25.0" prefWidth="386.0" />
       <Label layoutX="143.0" layoutY="81.0" prefHeight="34.0" prefWidth="82.0" text="Seuil mise :" />
       <Label layoutX="143.0" layoutY="170.0" prefHeight="34.0" prefWidth="82.0" text="Date de debut :" />
