--- a/src/gui/Menu.fxml
+++ b/src/gui/Menu.fxml
@@ -10,12 +10,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="574.0" prefWidth="1024.0" style="-fx-background-color: #FF4500;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuController">
+<AnchorPane id="AnchorPane" prefHeight="574.0" prefWidth="1024.0" style="-fx-background-color: #708090;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuController">
     <stylesheets>
         <URL value="@menu.css" />
     </stylesheets>
    <children>
-      <HBox layoutX="-1.0" prefHeight="95.0" prefWidth="1025.0" style="-fx-background-color: #ffffff;">
+      <HBox layoutX="-1.0" prefHeight="95.0" prefWidth="1025.0" styleClass="bgmenu">
          <children>
             <ImageView fitHeight="75.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
@@ -25,7 +25,7 @@
                   <Image url="@../../../../../Desktop/Zanimauxlogo.png" />
                </image>
             </ImageView>
-            <Label lineSpacing="10.0" styleClass="menu-item" text="Acceuil" textAlignment="CENTER" textFill="#5c5c5c">
+            <Label lineSpacing="10.0" prefHeight="119.0" prefWidth="117.0" styleClass="menu" text="Acceuil" textAlignment="CENTER" textFill="#5c5c5c">
                <font>
                   <Font name="System Italic" size="25.0" />
                </font>
@@ -58,7 +58,7 @@
                   <Insets top="38.0" />
                </HBox.margin>
             </Label>
-            <Label lineSpacing="10.0" styleClass="menu-item" text="Evenements" textAlignment="CENTER" textFill="#5e5e5e">
+            <Label lineSpacing="10.0" text="Evenements" textAlignment="CENTER" textFill="#5e5e5e">
                <font>
                   <Font size="25.0" />
                </font>
@@ -92,7 +92,7 @@
       </HBox>
       <Pane layoutX="-1.0" layoutY="99.0" prefHeight="476.0" prefWidth="1025.0" style="-fx-background-color: #ffffff;">
          <children>
-            <ImageView fitHeight="111.0" fitWidth="110.0" layoutX="903.0" layoutY="-64.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="111.0" fitWidth="110.0" layoutX="906.0" layoutY="-62.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../../Desktop/profil_aziz.png" />
                </image>
