--- a/src/gui/css/acceuil.css
+++ b/src/gui/css/acceuil.css
@@ -5,13 +5,11 @@
     -fx-background-color: #323754;
 }
 #headerBtns{
-    -fx-background-color: #323754;
-
+    -fx-background-color: black;
+    -fx-opacity: 0.75;
 }
 #headerBtns:hover{
-    -fx-border-color: #9A4595;
-    -fx-border-width: 2px;
-    -fx-border-style: solid;
+    -fx-opacity: 1;
 }
 
 #main-menu-label:hover{
@@ -31,14 +29,14 @@
 
 .menu_bar{
     -fx-background-color: white;
-    -fx-background-image:url("../utils/menu.png");
+    -fx-background-image:url("../utils/assets/menu.png");
    -fx-background-position: center center;
 }
 
 .main
 {
         -fx-background-color: #4169E1;
-        -fx-background-image:url("../utils/menu2.png");
+        -fx-background-image:url("../utils/assets/menu2.png");
 }
 
 .menu_item{
@@ -51,4 +49,3 @@
     -fx-text-fill: white;
     -fx-background-color: #4f86dd;
 }
-
