--- a/src/gui/acceuil.fxml
+++ b/src/gui/acceuil.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="parent" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="1025.0" styleClass="main" stylesheets="@acceuil.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.AcceuilController">
+<VBox fx:id="parent" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="1025.0" styleClass="main" stylesheets="@css/acceuil.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.AcceuilController">
    <children>
       <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="800.0" styleClass="menu_bar">
          <effect>
@@ -20,7 +20,7 @@
          <children>
             <ImageView fitHeight="45.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../utils/Zanimauxlogo.png" />
+                  <Image url="@../utils/assets/Zanimauxlogo.png" />
                </image>
                <HBox.margin>
                   <Insets left="25.0" />
@@ -94,7 +94,7 @@
                   <Insets left="20.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../utils/profile.png" />
+                  <Image url="@../utils/assets/profile.png" />
                </image></ImageView>
          </children>
       </HBox>
@@ -106,11 +106,11 @@
                      <children>
                         <Pane layoutX="250.0" layoutY="3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="240.0">
                            <children>
-                              <Pane id="headerBtns" layoutY="-3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="172.0" prefWidth="240.0" stylesheets="@acceuil.css">
+                              <Pane id="headerBtns" layoutY="-3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="172.0" prefWidth="240.0">
                                  <children>
                                     <ImageView fitHeight="172.0" fitWidth="240.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../utils/vet.jpg" />
+                                          <Image url="@../utils/assets/vet.jpg" />
                                        </image>
                                     </ImageView>
                                     <Label id="main-menu-label" layoutY="129.0" prefHeight="43.0" prefWidth="240.0" text="veterinaire" textFill="WHITE">
@@ -127,7 +127,7 @@
                                  <children>
                                     <ImageView fitHeight="156.0" fitWidth="240.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../utils/panier.jpg" />
+                                          <Image url="@../utils/assets/panier.jpg" />
                                        </image>
                                     </ImageView>
                                     <Label id="main-menu-label" layoutY="116.0" prefHeight="40.0" prefWidth="240.0" text="Panier" textFill="WHITE">
@@ -142,11 +142,11 @@
                               </Pane>
                            </children>
                         </Pane>
-                        <Pane id="headerBtns" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="336.0" prefWidth="243.0" stylesheets="@acceuil.css">
+                        <Pane id="headerBtns" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="336.0" prefWidth="243.0">
                            <children>
                               <ImageView fitHeight="336.0" fitWidth="243.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../utils/encehres.jpg" />
+                                    <Image url="@../utils/assets/encehres.jpg" />
                                  </image>
                               </ImageView>
                               <Label id="main-menu-label" layoutY="251.0" prefHeight="85.0" prefWidth="243.0" text="Encheres" textFill="WHITE">
@@ -161,11 +161,11 @@
                         </Pane>
                      </children>
                   </Pane>
-                  <Pane id="headerBtns" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="490.0" stylesheets="@acceuil.css">
+                  <Pane id="headerBtns" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="490.0">
                      <children>
                         <ImageView fitHeight="160.0" fitWidth="490.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../utils/store.jpg" />
+                              <Image url="@../utils/assets/store.jpg" />
                            </image>
                         </ImageView>
                         <Label id="main-menu-label" layoutY="120.0" prefHeight="40.0" prefWidth="490.0" text="store en ligne" textFill="WHITE">
@@ -185,11 +185,11 @@
             </Pane>
             <Pane layoutX="210.0" layoutY="40.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="504.0" prefWidth="500.0">
                <children>
-                  <Pane id="headerBtns" layoutX="-7.0" layoutY="348.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="156.0" prefWidth="497.0" stylesheets="@acceuil.css">
+                  <Pane id="headerBtns" layoutX="-7.0" layoutY="348.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="156.0" prefWidth="497.0">
                      <children>
                         <ImageView fitHeight="156.0" fitWidth="497.0" pickOnBounds="true" smooth="false">
                            <image>
-                              <Image url="@../utils/service.jpg" />
+                              <Image url="@../utils/assets/service.jpg" />
                            </image>
                         </ImageView>
                         <Label id="main-menu-label" layoutY="116.0" prefHeight="40.0" prefWidth="497.0" text="Services" textFill="WHITE">
@@ -202,14 +202,14 @@
                         </Label>
                      </children>
                   </Pane>
-                  <Pane id="headerBtns" layoutX="-7.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="497.0" stylesheets="@acceuil.css">
+                  <Pane id="headerBtns" layoutX="-7.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="497.0">
                      <children>
                         <ImageView fitHeight="340.0" fitWidth="497.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../utils/event.jpg" />
+                              <Image url="@../utils/assets/event.jpg" />
                            </image>
                         </ImageView>
-                        <Label id="main-menu-label" layoutY="255.0" prefHeight="85.0" prefWidth="497.0" stylesheets="@acceuil.css" text="Evenements" textFill="WHITE">
+                        <Label id="main-menu-label" layoutY="255.0" prefHeight="85.0" prefWidth="497.0" stylesheets="@css/acceuil.css" text="Evenements" textFill="WHITE">
                            <font>
                               <Font name="Roboto Condensed" size="16.0" />
                            </font>
