--- a/src/gui/acceuil.fxml
+++ b/src/gui/acceuil.fxml
@@ -163,7 +163,7 @@
                   </Pane>
                   <Pane id="headerBtns" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="490.0">
                      <children>
-                        <ImageView fitHeight="160.0" fitWidth="490.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="160.0" fitWidth="490.0" onMouseClicked="#RubriqueMagasin" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../utils/assets/store.jpg" />
                            </image>
