--- a/src/gui/acceuil.fxml
+++ b/src/gui/acceuil.fxml
@@ -11,9 +11,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+
 <VBox fx:id="parent" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="1025.0" styleClass="main" stylesheets="@css/acceuil.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.AcceuilController">
    <children>
-      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="800.0" styleClass="menu_bar">
+      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="800.0" styleClass="menu_bar" stylesheets="@css/acceuil.css">
          <effect>
             <DropShadow height="10.0" radius="4.5" width="10.0" />
          </effect>
@@ -24,8 +25,9 @@
                </image>
                <HBox.margin>
                   <Insets left="25.0" />
-               </HBox.margin></ImageView>
-            <Label prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Acceuil" textFill="#4f86dd">
+               </HBox.margin>
+            </ImageView>
+            <Label fx:id="acceuil" onMouseClicked="#Menu" prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Acceuil" textFill="#4f86dd">
                <font>
                   <Font size="22.0" />
                </font>
@@ -36,7 +38,7 @@
                   <Insets bottom="11.0" left="30.0" top="11.0" />
                </padding>
             </Label>
-            <Label prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Services" textFill="#837f7f">
+            <Label fx:id="services" onMouseClicked="#Menu" prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Services" textFill="#837f7f">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -47,7 +49,7 @@
                   <Insets />
                </HBox.margin>
             </Label>
-            <Label prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Produits" textFill="#837f7f">
+            <Label fx:id="produits" onMouseClicked="#Menu" prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Produits" textFill="#837f7f">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -55,7 +57,7 @@
                   <Insets bottom="11.0" left="23.0" top="11.0" />
                </padding>
             </Label>
-            <Label prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Veterinaires" textFill="#837f7f">
+            <Label fx:id="veterinaires" onMouseClicked="#Menu" prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Veterinaires" textFill="#837f7f">
                <font>
                   <Font size="22.0" />
                </font>
@@ -63,7 +65,7 @@
                   <Insets bottom="11.0" left="8.0" top="11.0" />
                </padding>
             </Label>
-            <Label prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Evenements" textFill="#837f7f">
+            <Label fx:id="evenements" onMouseClicked="#Menu" prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Evenements" textFill="#837f7f">
                <font>
                   <Font size="22.0" />
                </font>
@@ -95,7 +97,8 @@
                </HBox.margin>
                <image>
                   <Image url="@../utils/assets/profile.png" />
-               </image></ImageView>
+               </image>
+            </ImageView>
          </children>
       </HBox>
       <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="60.0" prefHeight="504.0" prefWidth="1024.0">
@@ -108,12 +111,12 @@
                            <children>
                               <Pane id="headerBtns" layoutY="-3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="172.0" prefWidth="240.0">
                                  <children>
-                                    <ImageView fitHeight="172.0" fitWidth="240.0" pickOnBounds="true" preserveRatio="true">
+                                    <ImageView fx:id="vet" fitHeight="172.0" fitWidth="240.0" onMouseClicked="#Menu" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@../utils/assets/vet.jpg" />
                                        </image>
                                     </ImageView>
-                                    <Label id="main-menu-label" layoutY="129.0" prefHeight="43.0" prefWidth="240.0" text="veterinaire" textFill="WHITE">
+                                    <Label id="main-menu-label" fx:id="vete" layoutY="129.0" onMouseClicked="#Menu" prefHeight="43.0" prefWidth="240.0" text="veterinaire" textFill="WHITE">
                                        <font>
                                           <Font name="Roboto Condensed" size="16.0" />
                                        </font>
@@ -125,12 +128,12 @@
                               </Pane>
                               <Pane id="headerBtns" layoutY="177.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="156.0" prefWidth="240.0">
                                  <children>
-                                    <ImageView fitHeight="156.0" fitWidth="240.0" pickOnBounds="true" preserveRatio="true">
+                                    <ImageView fx:id="pan" fitHeight="156.0" fitWidth="240.0" onMouseClicked="#Menu" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@../utils/assets/panier.jpg" />
                                        </image>
                                     </ImageView>
-                                    <Label id="main-menu-label" layoutY="116.0" prefHeight="40.0" prefWidth="240.0" text="Panier" textFill="WHITE">
+                                    <Label id="main-menu-label" fx:id="pani" layoutY="116.0" onMouseClicked="#Menu" prefHeight="40.0" prefWidth="240.0" text="Panier" textFill="WHITE">
                                        <font>
                                           <Font name="Roboto Condensed" size="16.0" />
                                        </font>
@@ -144,12 +147,12 @@
                         </Pane>
                         <Pane id="headerBtns" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="336.0" prefWidth="243.0">
                            <children>
-                              <ImageView fitHeight="336.0" fitWidth="243.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="enc" fitHeight="336.0" fitWidth="243.0" onMouseClicked="#Menu" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../utils/assets/encehres.jpg" />
                                  </image>
                               </ImageView>
-                              <Label id="main-menu-label" layoutY="251.0" prefHeight="85.0" prefWidth="243.0" text="Encheres" textFill="WHITE">
+                              <Label id="main-menu-label" fx:id="ench" layoutY="251.0" onMouseClicked="#Menu" prefHeight="85.0" prefWidth="243.0" text="Encheres" textFill="WHITE">
                                  <font>
                                     <Font name="Roboto Condensed" size="16.0" />
                                  </font>
@@ -163,12 +166,12 @@
                   </Pane>
                   <Pane id="headerBtns" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="490.0">
                      <children>
-                        <ImageView fitHeight="160.0" fitWidth="490.0" onMouseClicked="#RubriqueMagasin" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="sto" fitHeight="160.0" fitWidth="490.0" onMouseClicked="#Menu" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../utils/assets/store.jpg" />
                            </image>
                         </ImageView>
-                        <Label id="main-menu-label" layoutY="120.0" prefHeight="40.0" prefWidth="490.0" text="store en ligne" textFill="WHITE">
+                        <Label id="main-menu-label" fx:id="stor" layoutY="120.0" onMouseClicked="#Menu" prefHeight="40.0" prefWidth="490.0" text="store en ligne" textFill="WHITE">
                            <font>
                               <Font name="Roboto Condensed" size="16.0" />
                            </font>
@@ -187,12 +190,12 @@
                <children>
                   <Pane id="headerBtns" layoutX="-7.0" layoutY="348.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="156.0" prefWidth="497.0">
                      <children>
-                        <ImageView fitHeight="156.0" fitWidth="497.0" pickOnBounds="true" smooth="false">
+                        <ImageView fx:id="ser" fitHeight="156.0" fitWidth="497.0" onMouseClicked="#Menu" pickOnBounds="true" smooth="false">
                            <image>
                               <Image url="@../utils/assets/service.jpg" />
                            </image>
                         </ImageView>
-                        <Label id="main-menu-label" layoutY="116.0" prefHeight="40.0" prefWidth="497.0" text="Services" textFill="WHITE">
+                        <Label id="main-menu-label" fx:id="serv" layoutY="116.0" onMouseClicked="#Menu" prefHeight="40.0" prefWidth="497.0" text="Services" textFill="WHITE">
                            <font>
                               <Font name="Roboto Condensed" size="16.0" />
                            </font>
@@ -204,12 +207,12 @@
                   </Pane>
                   <Pane id="headerBtns" layoutX="-7.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="497.0">
                      <children>
-                        <ImageView fitHeight="340.0" fitWidth="497.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="eve" fitHeight="340.0" fitWidth="497.0" onMouseClicked="#Menu" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../utils/assets/event.jpg" />
                            </image>
                         </ImageView>
-                        <Label id="main-menu-label" layoutY="255.0" prefHeight="85.0" prefWidth="497.0" stylesheets="@css/acceuil.css" text="Evenements" textFill="WHITE">
+                        <Label id="main-menu-label" fx:id="even" layoutY="255.0" onMouseClicked="#Menu" prefHeight="85.0" prefWidth="497.0" stylesheets="@css/acceuil.css" text="Evenements" textFill="WHITE">
                            <font>
                               <Font name="Roboto Condensed" size="16.0" />
                            </font>
